Changed background color of container to pink

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@ title: Beyond
 	</div>
 </header>
 
-<div class="container">
+<!--<div class="div_hover"> Change div background color on hover</div>-->
+<div class="change_container_background">
 	<h2 class="editable" style="text-align: center;">Why TBI survivors need the vote</h2>
 
 	<ul class="thirds">
@@ -83,7 +84,7 @@ title: Beyond
 <div class="darker">
 	<div class="container">
 		<h2 class="editable">Join us</h2>
-		<p class="editable" style="text-align: center;">Sign up to hear the latest news and progress in our fight for the sheep vote.</p>
+		<p class="editable" style="text-align: center;">Sign up to hear the latest news and progress in our fight for inclusivity.</p>
 		<form action="{{ site.newsletter_action }}" method="post">
 			<input type="text" name="EMAIL" placeholder="Email">
 			<input type="submit" value="Sign up"/>
