Updated web design - colors, etc.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ title: Beyond
 		<div class="attribute">
 			<p class="meta">
 				<span
-						class="image"><img class="editable" src="{{ site.baseurl }}/images/favicon.jpg" alt="Wooly"></span>
+						class="image"><img class="editable" src="{{ site.baseurl }}/images/Movember.jpeg" alt="Cite"></span>
 				<span class="author editable"><strong>--TBI Survivor</strong></span>
 			</p>
 		</div>
